<resources>
    <string name="app_name">InClass04</string>
    <string name="select_complex_label">Select Complexity :</string>
    <string name="times">0 Times</string>
    <string name="min_lable">Minimum:</string>
    <string name="min_val" />
    <string name="max_label">Maximum:</string>
    <string name="max_val" />
    <string name="avg_label">Average:</string>
    <string name="avg_val" />
    <string name="button_generate">Generate Number Thread</string>
</resources>
